--- a/orderkl.html
+++ b/orderkl.html
@@ -21,7 +21,7 @@ $(document).ready(function(){
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3 d-block" data-navbar-on-scroll="data-navbar-on-scroll">
-        <div class="container"><a class="navbar-brand" href="index.html"><span class="fw-bold text-primary ms-2">TIKET-KEUN</span></a>
+        <div class="container"><a class="navbar-brand" href="index.html"><span class="fw-bold text-primary ms-2">TRAVEL-KEUN</span></a>
           <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
           <div class="collapse navbar-collapse border-top border-lg-0 mt-4 mt-lg-0" id="navbarSupportedContent">
             <ul class="navbar-nav mx-auto pt-2 pt-lg-0 font-base">
