--- a/pesananagra.html
+++ b/pesananagra.html
@@ -218,7 +218,7 @@ $(document).ready(function(){
               </div>
               <div class="col-md-3 col-lg-3 col-xl-3">
                 <p class="lead fw-normal mb-2">Agra Package</p>
-                <p><span class="text-muted"></span>M <span class="text-muted"></span>Grey</p>
+                <p><span class="text-muted"></span><span class="text-muted"></span></p>
               </div>
               <div class="col-md-3 col-lg-3 col-xl-2 d-flex">
                 <button class="btn btn-link px-2"
